--- a/VE_Builder/advectionTexturePreprocessor/tcGUI/tcGUI.vcproj
+++ b/VE_Builder/advectionTexturePreprocessor/tcGUI/tcGUI.vcproj
@@ -19,23 +19,24 @@
 			<Tool
 				Name="VCCLCompilerTool"
 				Optimization="0"
-				AdditionalIncludeDirectories="&quot;$(WX_WIDGETS_HOME)\include&quot;;&quot;$(WX_WIDGETS_HOME)\lib\vc_lib\mswd&quot;;&quot;$(VTK_HOME)\include\vtk&quot;"
-				PreprocessorDefinitions="WIN32;_DEBUG;__WXMSW__;__WXDEBUG__;_WINDOWS"
-				MinimalRebuild="TRUE"
+				AdditionalIncludeDirectories="&quot;$(WX_WIDGETS_HOME)\include&quot;;&quot;$(VTK_HOME)\include\vtk&quot;"
+				PreprocessorDefinitions="WIN32;_DEBUG;wxUSE_GUI=1;__WXDEBUG__;WXDEBUG=1;WXUSINGDLL;WINVER=0x400"
+				MinimalRebuild="FALSE"
 				BasicRuntimeChecks="3"
 				RuntimeLibrary="3"
-				UsePrecompiledHeader="0"
-				WarningLevel="3"
-				Detect64BitPortabilityProblems="TRUE"
+				RuntimeTypeInfo="TRUE"
+				UsePrecompiledHeader="2"
+				WarningLevel="1"
+				Detect64BitPortabilityProblems="FALSE"
 				DebugInformationFormat="4"/>
 			<Tool
 				Name="VCCustomBuildTool"/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalDependencies="vtkCommon.lib vtkRendering.lib vtkGraphics.lib vtkIO.lib vtkFiltering.lib wxmsw25d_adv.lib wxmsw25d_core.lib wxbase25d.lib wxtiffd.lib wxjpegd.lib wxpngd.lib wxzlibd.lib wxregexd.lib wxexpatd.lib winmm.lib comctl32.lib rpcrt4.lib wsock32.lib oleacc.lib odbc32.lib"
+				AdditionalDependencies="wxmsw24d.lib  vtkCommon.lib vtkRendering.lib vtkGraphics.lib vtkIO.lib vtkFiltering.lib"
 				OutputFile="$(OutDir)/tcGUI.exe"
 				LinkIncremental="2"
-				AdditionalLibraryDirectories="&quot;$(WX_WIDGETS_HOME)\lib\vc_lib&quot;;&quot;$(VTK_HOME)\lib\vtk&quot;"
+				AdditionalLibraryDirectories="&quot;$(WX_WIDGETS_HOME)\lib\&quot;;&quot;$(VTK_HOME)\lib\vtk&quot;"
 				GenerateDebugInformation="TRUE"
 				ProgramDatabaseFile="$(OutDir)/tcGUI.pdb"
 				SubSystem="2"
