--- a/VE_Installer/omniORB4.cfg
+++ b/VE_Installer/omniORB4.cfg
@@ -260,8 +260,7 @@ abortOnInternalError = 0
 #           = InterfaceRepository=corbaloc::1.2@marrow:5009/Intf
 #
 #   The default for the set of initial references is empty.
-InitRef = NameService=corbaname::costello:2809
-#InitRef = NameService=corbaname::vracs001:2818
+InitRef = NameService=corbaname::NewHotness:2809
 
 ############################################################################
 # DefaultInitRef
@@ -277,7 +276,7 @@ InitRef = NameService=corbaname::costello:2809
 #   reference denoted by `corbaloc::myhost.example.com/MyService'.
 #
 #   The default is empty.
-DefaultInitRef = corbaloc::lego
+DefaultInitRef = corbaloc::NewHotness
 
 ############################################################################
 # clientTransportRule
