--- a/VE_Xplorer/VE_Xplorer.vcproj
+++ b/VE_Xplorer/VE_Xplorer.vcproj
@@ -550,13 +550,7 @@
 				RelativePath=".\cfd1DTextInput.cxx">
 			</File>
 			<File
-				RelativePath=".\cfd3DTextureCullCallback.cxx">
-			</File>
-			<File
 				RelativePath=".\cfdAccessoryFunctions.cxx">
-			</File>
-			<File
-				RelativePath=".\cfdAdvectPropertyCallback.cxx">
 			</File>
 			<File
 				RelativePath=".\cfdAnimatedImage.cxx">
@@ -584,9 +578,6 @@
 			</File>
 			<File
 				RelativePath=".\cfdContours.cxx">
-			</File>
-			<File
-				RelativePath=".\cfdCopyTo3DTextureStage.cxx">
 			</File>
 			<File
 				RelativePath=".\cfdCursor.cxx">
@@ -686,21 +677,6 @@
 			</File>
 			<File
 				RelativePath=".\cfdObjects.cxx">
-			</File>
-			<File
-				RelativePath=".\cfdOSGAdvectionShaderManager.cxx">
-			</File>
-			<File
-				RelativePath=".\cfdOSGScalarShaderManager.cxx">
-			</File>
-			<File
-				RelativePath=".\cfdOSGShaderManager.cxx">
-			</File>
-			<File
-				RelativePath=".\cfdOSGTransferShaderManager.cxx">
-			</File>
-			<File
-				RelativePath=".\cfdPBufferManager.cxx">
 			</File>
 			<File
 				RelativePath="..\VE_SceneGraph\cfdPfSceneManagement.cxx">
@@ -856,25 +832,7 @@
 				RelativePath="..\VE_SceneGraph\cfdTempAnimation.cxx">
 			</File>
 			<File
-				RelativePath=".\cfdTextureBasedVizHandler.cxx">
-			</File>
-			<File
-				RelativePath=".\cfdTextureManager.cxx">
-			</File>
-			<File
 				RelativePath=".\cfdThread.cxx">
-			</File>
-			<File
-				RelativePath=".\cfdUpdateableOSGNoiseTexture3d.cxx">
-			</File>
-			<File
-				RelativePath=".\cfdUpdateableOSGTexture1d.cxx">
-			</File>
-			<File
-				RelativePath=".\cfdUpdateParameterCallback.cpp">
-			</File>
-			<File
-				RelativePath=".\cfdUpdateTextureCallback.cpp">
 			</File>
 			<File
 				RelativePath=".\cfdVEAvailModules.cxx">
@@ -1271,13 +1229,7 @@
 				RelativePath="cfd1DTextInput.h">
 			</File>
 			<File
-				RelativePath=".\cfd3DTextureCullCallback.h">
-			</File>
-			<File
 				RelativePath="VE_Xplorer\cfdAccessoryFunctions.h">
-			</File>
-			<File
-				RelativePath=".\cfdAdvectPropertyCallback.h">
 			</File>
 			<File
 				RelativePath="cfdAnimatedImage.h">
@@ -1305,9 +1257,6 @@
 			</File>
 			<File
 				RelativePath="cfdContours.h">
-			</File>
-			<File
-				RelativePath=".\cfdCopyTo3DTextureStage.h">
 			</File>
 			<File
 				RelativePath=".\cfdCosNaming.h">
@@ -1412,24 +1361,6 @@
 				RelativePath="cfdObjects.h">
 			</File>
 			<File
-				RelativePath=".\cfdOSGAdvectionShaderManager.h">
-			</File>
-			<File
-				RelativePath=".\cfdOSGPingPongTexture3d.h">
-			</File>
-			<File
-				RelativePath=".\cfdOSGScalarShaderManager.h">
-			</File>
-			<File
-				RelativePath=".\cfdOSGShaderManager.h">
-			</File>
-			<File
-				RelativePath=".\cfdOSGTransferShaderManager.h">
-			</File>
-			<File
-				RelativePath=".\cfdPBufferManager.h">
-			</File>
-			<File
 				RelativePath="..\VE_SceneGraph\cfdPfSceneManagement.h">
 			</File>
 			<File
@@ -1490,28 +1421,10 @@
 				RelativePath="..\VE_SceneGraph\cfdTempAnimation.h">
 			</File>
 			<File
-				RelativePath=".\cfdTextureBasedVizHandler.h">
-			</File>
-			<File
-				RelativePath=".\cfdTextureManager.h">
-			</File>
-			<File
 				RelativePath=".\cfdThread.h">
 			</File>
 			<File
 				RelativePath=".\cfdTransientVizHandler.h">
-			</File>
-			<File
-				RelativePath=".\cfdUpdateableOSGNoiseTexture3d.h">
-			</File>
-			<File
-				RelativePath=".\cfdUpdateableOSGTexture1d.h">
-			</File>
-			<File
-				RelativePath=".\cfdUpdateParameterCallback.h">
-			</File>
-			<File
-				RelativePath=".\cfdUpdateTextureCallback.h">
 			</File>
 			<File
 				RelativePath=".\cfdVEBaseClass.h">
@@ -1596,6 +1509,118 @@
 		<Filter
 			Name="Resource Files"
 			Filter="ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe">
+		</Filter>
+		<Filter
+			Name="texture_src"
+			Filter="">
+			<File
+				RelativePath=".\cfd3DTextureCullCallback.cxx">
+			</File>
+			<File
+				RelativePath=".\cfdCopyTo3DTextureStage.cxx">
+			</File>
+			<File
+				RelativePath=".\cfdOSGPingPongTexture3d.cxx">
+			</File>
+			<File
+				RelativePath=".\cfdTextureBasedVizHandler.cxx">
+			</File>
+			<File
+				RelativePath=".\cfdTextureManager.cxx">
+			</File>
+			<File
+				RelativePath=".\cfdUpdateableOSGNoiseTexture3d.cxx">
+			</File>
+			<File
+				RelativePath=".\cfdUpdateableOSGTexture1d.cxx">
+			</File>
+			<File
+				RelativePath=".\cfdUpdateParameterCallback.cpp">
+			</File>
+			<File
+				RelativePath=".\cfdUpdateTextureCallback.cpp">
+			</File>
+			<Filter
+				Name="shader_src"
+				Filter="">
+				<File
+					RelativePath=".\cfdAdvectionSubGraph.cxx">
+				</File>
+				<File
+					RelativePath=".\cfdAdvectPropertyCallback.cxx">
+				</File>
+				<File
+					RelativePath=".\cfdOSGAdvectionShaderManager.cxx">
+				</File>
+				<File
+					RelativePath=".\cfdOSGScalarShaderManager.cxx">
+				</File>
+				<File
+					RelativePath=".\cfdOSGShaderManager.cxx">
+				</File>
+				<File
+					RelativePath=".\cfdOSGTransferShaderManager.cxx">
+				</File>
+				<File
+					RelativePath=".\cfdPBufferManager.cxx">
+				</File>
+			</Filter>
+		</Filter>
+		<Filter
+			Name="texture_headers"
+			Filter="">
+			<File
+				RelativePath=".\cfd3DTextureCullCallback.h">
+			</File>
+			<File
+				RelativePath=".\cfdCopyTo3DTextureStage.h">
+			</File>
+			<File
+				RelativePath=".\cfdOSGPingPongTexture3d.h">
+			</File>
+			<File
+				RelativePath=".\cfdTextureBasedVizHandler.h">
+			</File>
+			<File
+				RelativePath=".\cfdTextureManager.h">
+			</File>
+			<File
+				RelativePath=".\cfdUpdateableOSGNoiseTexture3d.h">
+			</File>
+			<File
+				RelativePath=".\cfdUpdateableOSGTexture1d.h">
+			</File>
+			<File
+				RelativePath=".\cfdUpdateParameterCallback.h">
+			</File>
+			<File
+				RelativePath=".\cfdUpdateTextureCallback.h">
+			</File>
+			<Filter
+				Name="shader_headers"
+				Filter="">
+				<File
+					RelativePath=".\cfdAdvectionSubGraph.h">
+				</File>
+				<File
+					RelativePath=".\cfdAdvectPropertyCallback.h">
+				</File>
+				<File
+					RelativePath=".\cfdOSGAdvectionShaderManager.h">
+				</File>
+				<File
+					RelativePath=".\cfdOSGScalarShaderManager.h">
+				</File>
+				<File
+					RelativePath=".\cfdOSGShaderManager.h">
+				</File>
+				<File
+					RelativePath=".\cfdOSGTransferShaderManager.h">
+				</File>
+				<File
+					RelativePath=".\cfdPBufferManager.h">
+				</File>
+			</Filter>
 		</Filter>
 	</Files>
 	<Globals>
