//works right now for the INEL Tecplot data //needs to be compiled with main.cpp since this code needs to be integrated with //translateToVtk.cpp
#include "tecplotReader.h"

tecplotReader::tecplotReader( )
{
   uGrid = NULL;
   pts = NULL;
   parameterData = NULL;
   numCells = 0;
   x = NULL;
   y = NULL;
   u = NULL;
   v = NULL;
   w = NULL;
   measurement = NULL;
   absVel = NULL;
   numVertices = 0;
}
tecplotReader::~tecplotReader()
{
   fileI.close();
   delete [] x; x = NULL;
   delete [] y; y = NULL;
   delete [] u; u = NULL;
   delete [] v; v = NULL;
   delete [] w; w = NULL;
   delete [] measurement; measurement = NULL;
   delete [] absVel; absVel = NULL;
}
/*vtkUnstructuredGrid**/ void tecplotReader::tecplotToVTK( char* inFileName, char* outFileName, int debug, int nx, int ny )
{
   int numChars;
   numChars = 0;
   nX = nx;
   nY = ny;
   numCells = (nX-1)*(nY-1);
   numVertices = nX*nY;
   x = new double [nX*nY];
   y = new double [nX*nY];
   u = new double [nX*nY];
   v = new double [nX*nY];
   w = new double [nX*nY];
   measurement = new double [nX*nY];
   absVel = new double [nX*nY];
   parameterData = new vtkFloatArray* [ 3 ]; //the number of parameters is 3 ( <U>, m, |U| )
   for ( int i=0;i<3;i++ )
   {      
      parameterData[ i ] = vtkFloatArray::New();
   }   
   parameterData[ 0 ]->SetNumberOfComponents( 3 ); //velocity vector
   parameterData[ 0 ]->SetNumberOfTuples( 2*nX*nY );
   parameterData[ 0 ]->SetName( "Velocity" );
   parameterData[ 1 ]->SetNumberOfComponents( 1 ); //measurement scalar
   parameterData[ 1 ]->SetNumberOfTuples( 2*nX*nY );
   parameterData[ 1 ]->SetName( "Measurement" );
   parameterData[ 2 ]->SetNumberOfComponents( 1 ); //absolute velocity scalar
   parameterData[ 2 ]->SetNumberOfTuples( 2*nX*nY );   
   parameterData[ 2 ]->SetName( "Absolute Velocity" );
   std::cout<<"Input file        :"<<inFileName<<std::endl
            <<"Output file       :"<<outFileName<<std::endl
            <<"Number of  cells  :"<<numCells

--- a/VE_Builder/Translator/Makefile
+++ b/VE_Builder/Translator/Makefile
@@ -1,6 +1,6 @@
 # Create the OS-dependent directory name
-APP_NAME= $(VE_SUITE_HOME)/bin/$(CFDHOSTTYPE)/translateToVtk
-
+#APP_NAME= $(VE_SUITE_HOME)/bin/$(CFDHOSTTYPE)/translateToVtk
+APP_NAME= $(VE_SUITE_HOME)/VE_Builder/Translator/main
 all:
 	$(MAKE) NO_DEPEND=0 cxx
 	$(MAKE) $(APP_NAME)
@@ -9,7 +9,7 @@ all:
 srcdir= .
 
 SRCS=\
-   translateToVtk.cpp \
+   main.cpp\
    starReader.cpp \
    avsReader.cpp \
    reiReader.cpp \
@@ -30,9 +30,10 @@ SRCS=\
    jdMAPReader.cpp \
    enSightGoldReader.cpp \
    ansysReader.cpp \
-   cfdAccessoryFunctions.cpp
+   cfdAccessoryFunctions.cpp\
+   tecplotReader.cpp
 #   vtkEnSightFortranBinaryReader.cxx
-
+#translateToVtk.cpp
 # Specify the OS-dependent directory name for object files and depends
 OBJDIR= $(CFDHOSTTYPE)
 DEPDIR= $(CFDHOSTTYPE)
