--- a/VE_CE/WinServer.vcproj
+++ b/VE_CE/WinServer.vcproj
@@ -232,8 +232,7 @@
 			<File
 				RelativePath="..\VE_Conductor\Framework\package.cpp">
 				<FileConfiguration
-					Name="Debug|Win32"
-					ExcludedFromBuild="TRUE">
+					Name="Debug|Win32">
 					<Tool
 						Name="VCCLCompilerTool"/>
 				</FileConfiguration>
